update pub layout

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,22 @@
 This will be Emily's bibliography.
 ---
 
+@article{D4MH01038H,
+author="Oliphant, Emily and Mantena, Veda and Brod, Madison and Snyder, G. Jeffrey and Sun, Wenhao",
+title="Why does silicon have an indirect band gap?",
+journal="Mater. Horiz.",
+year="2025",
+volume="12",
+issue="9",
+pages="3073-3083",
+publisher="The Royal Society of Chemistry",
+doi="10.1039/D4MH01038H",
+url="http://dx.doi.org/10.1039/D4MH01038H",
+abstract  ="It is difficult to intuit how electronic structure features—such as band gap magnitude{,} location of band extrema{,} effective masses{,} etc.—arise from the underlying crystal chemistry of a material. Here we present a strategy to distill sparse and chemically-interpretable tight-binding models from density functional theory calculations{,} enabling us to interpret how multiple orbital interactions in a 3D crystal conspire to shape the overall band structure. Applying this process to silicon{,} we show that its indirect gap arises from a competition between first and second nearest-neighbor bonds—where second nearest-neighbor interactions pull the conduction band down from Γ to X in a cosine shape{,} but the first nearest-neighbor bonds push the band up near X{,} resulting in the characteristic dip of the silicon conduction band. By identifying the essential orbital interactions that shape the conduction band{,} we can further rationally tune bond strengths to morph the silicon band structure into the germanium band structure. Our computational approach serves as a general framework to extract the crystal chemistry origins of electronic structure features from density functional theory calculations{,} enabling a new paradigm of bonding-by-design."
+preview={emily2025.jpg},
+selected={true}
+}
+
 
 @article{PhysRev.47.777,
   title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
