--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@ This will be Emily's bibliography.
 @article{D4MH01038H,
 author="Oliphant, Emily and Mantena, Veda and Brod, Madison and Snyder, G. Jeffrey and Sun, Wenhao",
 title="Why does silicon have an indirect band gap?",
-journal="Mater. Horiz.",
+journal="Materials Horizons",
 year="2025",
 volume="12",
 issue="9",
@@ -18,6 +18,18 @@ preview={emily2025.jpg},
 selected={true}
 }
 
+@article{oliphant2025crystalorbitalguidediteration,
+      title={Crystal Orbital Guided Iteration to Atomic Orbitals}, 
+      author={Emily Oliphant and Emmanouil Kioupakis and Wenhao Sun},
+      year={2025},
+      eprint={2511.19725},
+      archivePrefix={arXiv},
+      primaryClass={cond-mat.mtrl-sci},
+      url={https://arxiv.org/abs/2511.19725},
+      abstract={Atomic orbitals underpin our understanding of electronic structure, providing intuitive descriptions of bonding, charge transfer, magnetism, and correlation effects. Despite their utility, an atomic basis that is adaptable, strictly localized on atomic centers, and enables accurate tight-binding interpolation has remained elusive. Here, we introduce Crystal Orbital Guided Iteration To atomic-Orbitals (COGITO), a framework that constructs an optimal atomic orbital basis by identifying and resolving key mathematical obstacles inherent to nonorthogonal bases--particularly uncontrolled orbital mixing, and the fixed-overlap constraint between orbitals. We demonstrate that COGITO enables tight-binding models as accurate as MLWF-based approaches, while preserving the ability of tight-binding parameters to represent the projected atomic basis--an essential feature lost in schemes that enforce orbital orthogonality or maximal localization. By creating accurate and chemically interpretable models of electronic structure, COGITO reveals the orbital-resolved covalent bonds and charge transfer that is encoded in the Kohn-Sham wavefunctions of DFT. Our method thus offers a powerful tool for any physics- or chemistry-based application that relies on a faithful description of local electronic structure.},
+      selected={true},
+      preview={emily2025.jpg} 
+}
 
 @article{PhysRev.47.777,
   title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
