--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,7 @@ publisher="The Royal Society of Chemistry",
 doi="10.1039/D4MH01038H",
 url="http://dx.doi.org/10.1039/D4MH01038H",
 abstract  ="It is difficult to intuit how electronic structure features—such as band gap magnitude{,} location of band extrema{,} effective masses{,} etc.—arise from the underlying crystal chemistry of a material. Here we present a strategy to distill sparse and chemically-interpretable tight-binding models from density functional theory calculations{,} enabling us to interpret how multiple orbital interactions in a 3D crystal conspire to shape the overall band structure. Applying this process to silicon{,} we show that its indirect gap arises from a competition between first and second nearest-neighbor bonds—where second nearest-neighbor interactions pull the conduction band down from Γ to X in a cosine shape{,} but the first nearest-neighbor bonds push the band up near X{,} resulting in the characteristic dip of the silicon conduction band. By identifying the essential orbital interactions that shape the conduction band{,} we can further rationally tune bond strengths to morph the silicon band structure into the germanium band structure. Our computational approach serves as a general framework to extract the crystal chemistry origins of electronic structure features from density functional theory calculations{,} enabling a new paradigm of bonding-by-design.",
-preview={emily2025.jpg},
+preview={silicon_preview.png},
 selected={true}
 }
 
@@ -28,7 +28,7 @@ selected={true}
       url={https://arxiv.org/abs/2511.19725},
       abstract={Atomic orbitals underpin our understanding of electronic structure, providing intuitive descriptions of bonding, charge transfer, magnetism, and correlation effects. Despite their utility, an atomic basis that is adaptable, strictly localized on atomic centers, and enables accurate tight-binding interpolation has remained elusive. Here, we introduce Crystal Orbital Guided Iteration To atomic-Orbitals (COGITO), a framework that constructs an optimal atomic orbital basis by identifying and resolving key mathematical obstacles inherent to nonorthogonal bases--particularly uncontrolled orbital mixing, and the fixed-overlap constraint between orbitals. We demonstrate that COGITO enables tight-binding models as accurate as MLWF-based approaches, while preserving the ability of tight-binding parameters to represent the projected atomic basis--an essential feature lost in schemes that enforce orbital orthogonality or maximal localization. By creating accurate and chemically interpretable models of electronic structure, COGITO reveals the orbital-resolved covalent bonds and charge transfer that is encoded in the Kohn-Sham wavefunctions of DFT. Our method thus offers a powerful tool for any physics- or chemistry-based application that relies on a faithful description of local electronic structure.},
       selected={true},
-      preview={emily2025.jpg} 
+      preview={silicon_otherprev.png} 
 }
 
 @article{PhysRev.47.777,
