--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,24 +28,6 @@ selected={true}
       url={https://arxiv.org/abs/2511.19725},
       abstract={Atomic orbitals underpin our understanding of electronic structure, providing intuitive descriptions of bonding, charge transfer, magnetism, and correlation effects. Despite their utility, an atomic basis that is adaptable, strictly localized on atomic centers, and enables accurate tight-binding interpolation has remained elusive. Here, we introduce Crystal Orbital Guided Iteration To atomic-Orbitals (COGITO), a framework that constructs an optimal atomic orbital basis by identifying and resolving key mathematical obstacles inherent to nonorthogonal bases--particularly uncontrolled orbital mixing, and the fixed-overlap constraint between orbitals. We demonstrate that COGITO enables tight-binding models as accurate as MLWF-based approaches, while preserving the ability of tight-binding parameters to represent the projected atomic basis--an essential feature lost in schemes that enforce orbital orthogonality or maximal localization. By creating accurate and chemically interpretable models of electronic structure, COGITO reveals the orbital-resolved covalent bonds and charge transfer that is encoded in the Kohn-Sham wavefunctions of DFT. Our method thus offers a powerful tool for any physics- or chemistry-based application that relies on a faithful description of local electronic structure.},
       selected={true},
-      preview={silicon_otherprev.png} 
-}
-
-@article{PhysRev.47.777,
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777}, 
-  selected={true},
-  preview={emily2025.jpg}
+      preview={cogito_finalprev.png} 
 }
 
